[gd_scene load_steps=12 format=3 uid="uid://d4j60pxararwn"]

[ext_resource type="Script" path="res://scripts/Level_1.gd" id="1_artsy"]
[ext_resource type="PackedScene" uid="uid://civsko13ciygj" path="res://tank_spawn.tscn" id="2_prab3"]
[ext_resource type="PackedScene" uid="uid://cj0qtva3dfgew" path="res://Globals/pause_scene.tscn" id="3_1th3n"]
[ext_resource type="PackedScene" uid="uid://rnxmwfu7lte7" path="res://scenes/Tank.tscn" id="3_k6ve2"]
[ext_resource type="PackedScene" uid="uid://r03q1fmt50iw" path="res://scenes/Flag.tscn" id="4_p7dn3"]
[ext_resource type="PackedScene" uid="uid://dg3ksylqa21q5" path="res://scenes/enemy_flag.tscn" id="5_mx5hu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iqxv2"]
resource_name = "Walls"
texture_region_size = Vector2i(390, 390)
24:8/0 = 0
24:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
24:8/0/physics_layer_0/angular_velocity = 0.0
25:8/0 = 0
25:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
25:8/0/physics_layer_0/angular_velocity = 0.0
26:8/0 = 0
26:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
26:8/0/physics_layer_0/angular_velocity = 0.0
27:8/0 = 0
27:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
27:8/0/physics_layer_0/angular_velocity = 0.0
28:8/0 = 0
28:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
28:8/0/physics_layer_0/angular_velocity = 0.0
29:9/0 = 0
29:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
29:9/0/physics_layer_0/angular_velocity = 0.0
30:9/0 = 0
30:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
30:9/0/physics_layer_0/angular_velocity = 0.0
31:9/0 = 0
31:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
31:9/0/physics_layer_0/angular_velocity = 0.0
32:9/0 = 0
32:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
32:9/0/physics_layer_0/angular_velocity = 0.0
33:9/0 = 0
33:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
33:9/0/physics_layer_0/angular_velocity = 0.0
34:10/0 = 0
34:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
34:10/0/physics_layer_0/angular_velocity = 0.0
35:11/0 = 0
35:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
35:11/0/physics_layer_0/angular_velocity = 0.0
36:11/0 = 0
36:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
36:11/0/physics_layer_0/angular_velocity = 0.0
37:12/0 = 0
37:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
37:12/0/physics_layer_0/angular_velocity = 0.0
38:13/0 = 0
38:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
38:13/0/physics_layer_0/angular_velocity = 0.0
39:14/0 = 0
39:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
39:14/0/physics_layer_0/angular_velocity = 0.0
40:15/0 = 0
40:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
40:15/0/physics_layer_0/angular_velocity = 0.0
41:16/0 = 0
41:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:16/0/physics_layer_0/angular_velocity = 0.0
42:17/0 = 0
42:17/0/physics_layer_0/linear_velocity = Vector2(0, 0)
42:17/0/physics_layer_0/angular_velocity = 0.0
41:17/0 = 0
41:17/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:17/0/physics_layer_0/angular_velocity = 0.0
41:15/0 = 0
41:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:15/0/physics_layer_0/angular_velocity = 0.0
41:14/0 = 0
41:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:14/0/physics_layer_0/angular_velocity = 0.0
41:13/0 = 0
41:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:13/0/physics_layer_0/angular_velocity = 0.0
41:12/0 = 0
41:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:12/0/physics_layer_0/angular_velocity = 0.0
41:11/0 = 0
41:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:11/0/physics_layer_0/angular_velocity = 0.0
41:10/0 = 0
41:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:10/0/physics_layer_0/angular_velocity = 0.0
41:9/0 = 0
41:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:9/0/physics_layer_0/angular_velocity = 0.0
42:8/0 = 0
42:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
42:8/0/physics_layer_0/angular_velocity = 0.0
32:13/0 = 0
32:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
32:13/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -62, 195, -60, 195, 56, 62, 58, -195, 58)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -58, 74, -66, 72, 68, -195, 58)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -68, 195, -62, 195, 62, -64, 62)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(64, -68, 60, 195, -54, 195, -62, -62)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 62, 58, 64, 58, 195, -68, 195, -62, -58, 195, -58)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(62, -195, 64, -58, 195, -58, 195, 68, -58, 62, -58, -195)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, 62, -58, 64, -58, 195, 68, 195, 62, -58, -195, -58)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -62, -58, -64, -58, -195, 68, -195, 62, 58, -195, 58)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(62, -195, 58, 195, -56, 195, -58, -195)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(62, -195, 60, 48, -64, 50, -58, -195)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c5hej"]
texture_region_size = Vector2i(160, 160)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -62, 195, -60, 195, 56, 62, 58, -195, 58)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -62, 195, -60, 195, 56, 62, 58, -195, 58)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gnr7h"]
texture_region_size = Vector2i(90, 90)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
15:5/0 = 0
15:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:5/0/physics_layer_0/angular_velocity = 0.0
16:5/0 = 0
16:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:5/0/physics_layer_0/angular_velocity = 0.0
17:5/0 = 0
17:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:5/0/physics_layer_0/angular_velocity = 0.0
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
17:3/0 = 0
17:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:3/0/physics_layer_0/angular_velocity = 0.0
17:2/0 = 0
17:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:2/0/physics_layer_0/angular_velocity = 0.0
17:1/0 = 0
17:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:1/0/physics_layer_0/angular_velocity = 0.0
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
16:0/0 = 0
16:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -44, 45, -44, 45, 44, -45, 44)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -44, 45, -44, 45, 44, -45, 44)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
9:8/0 = 0
9:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:8/0/physics_layer_0/angular_velocity = 0.0
10:8/0 = 0
10:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:8/0/physics_layer_0/angular_velocity = 0.0
11:8/0 = 0
11:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:8/0/physics_layer_0/angular_velocity = 0.0
12:8/0 = 0
12:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:8/0/physics_layer_0/angular_velocity = 0.0
12:7/0 = 0
12:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gej3s"]
texture_region_size = Vector2i(90, 90)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -44, 45, -44, 45, 44, -45, 44)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -44, 45, -44, 45, 44, -45, 44)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="1"]
tile_size = Vector2i(90, 90)
physics_layer_0/collision_layer = 255
physics_layer_0/collision_mask = 255
sources/0 = SubResource("TileSetAtlasSource_iqxv2")
sources/2 = SubResource("TileSetAtlasSource_c5hej")
sources/3 = SubResource("TileSetAtlasSource_gnr7h")
sources/4 = SubResource("TileSetAtlasSource_gej3s")

[node name="Level_1" type="Node2D"]
script = ExtResource("1_artsy")

[node name="Tank" parent="." instance=ExtResource("3_k6ve2")]
position = Vector2(969.937, 249.038)

[node name="Area2D" type="Area2D" parent="."]

[node name="background_img" type="Sprite2D" parent="Area2D"]
position = Vector2(45, 45)
scale = Vector2(23.3702, 14.4516)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("1")
format = 2
layer_0/tile_data = PackedInt32Array(-1310729, 3, 0, -1245193, 3, 0, -1179657, 3, 0, -1114121, 3, 0, -1048585, 3, 0, -1048584, 3, 0, -1048583, 3, 0, -1114119, 3, 0, -1114118, 3, 0, -1114117, 3, 0, -1114116, 3, 0, -1114115, 3, 0, -1114114, 3, 0, -1114113, 3, 0, -1179648, 3, 0, -1179647, 3, 0, -1245183, 3, 0, -1310719, 3, 0, -1376255, 3, 0, -1114111, 3, 0, -1114112, 3, 0, -1048577, 3, 0, -1048578, 3, 0, -1048579, 3, 0, -1048580, 3, 0, -1048581, 3, 0, -983045, 3, 0, -983046, 3, 0, -983047, 3, 0, -1048582, 3, 0, -983044, 3, 0, -983043, 3, 0, -983042, 3, 0, -983041, 3, 0, -1048576, 3, 0, -1048575, 3, 0, -983048, 3, 0, -983049, 3, 0, -1179656, 3, 0, -1114120, 3, 0, -1245192, 3, 0, -1310728, 3, 0, -1310727, 3, 0, -1310726, 3, 0, -1245190, 3, 0, -1179655, 3, 0, -1179654, 3, 0, -1179653, 3, 0, -1245189, 3, 0, -1245188, 3, 0, -1245187, 3, 0, -1245186, 3, 0, -1245185, 3, 0, -1179652, 3, 0, -1179651, 3, 0, -1179650, 3, 0, -1179649, 3, 0, -1245184, 3, 0, -1245191, 3, 0, -1310725, 3, 0, -1310724, 3, 0, -1310723, 3, 0, -1310722, 3, 0, -1310721, 3, 0, -1376256, 3, 0, -1310720, 3, 0, 1376250, 3, 0, 1310714, 3, 0, 1245178, 3, 0, 1114116, 3, 0, 1179652, 3, 0, 1245188, 3, 0, 1310724, 3, 0, 1179642, 3, 0, 1114106, 3, 0, 1048570, 3, 0, 1048571, 3, 0, 1048572, 3, 0, 1048573, 3, 0, 1048574, 3, 0, 983044, 3, 0, 1048580, 3, 0, 1048575, 3, 0, 983041, 3, 0, 983040, 3, 0, 983042, 3, 0, 983043, 3, 0, -589836, 3, 0, -524300, 3, 0, -458764, 3, 0, -393228, 3, 0, -327692, 3, 0, 524276, 3, 0, 589812, 3, 0, 655348, 3, 0, -458748, 3, 0, -393212, 3, 0, -327676, 3, 0, -262140, 3, 0, -196604, 3, 0, -131068, 3, 0, 65540, 3, 0, 131076, 3, 0, 262148, 3, 0, 327684, 3, 0, 393220, 3, 0, 458756, 3, 0, 524292, 3, 0, 589828, 3, 0, -262156, 3, 0, -196620, 3, 0, -131084, 3, 0, -65548, 3, 0, 262132, 3, 0, 327668, 3, 0, 393204, 3, 0, 458740, 3, 0, 196596, 3, 0, 131060, 3, 0, 65524, 3, 0, -12, 3, 0, -655356, 3, 0, -589820, 3, 0, -524284, 3, 0, -589828, 3, 0, -524292, 3, 0, -458756, 3, 0, -393220, 3, 0, -327684, 3, 0, -262148, 3, 0, -196612, 3, 0, -131076, 3, 0, -65540, 3, 0, -4, 3, 0, 65532, 3, 0, 131068, 3, 0, 196604, 3, 0, 262140, 3, 0, 327676, 3, 0, 393212, 3, 0, 458748, 3, 0, 524284, 3, 0, 589820, 3, 0, -262147, 4, 0, -262146, 4, 0, -262145, 4, 0, -327680, 4, 0, -327679, 4, 0, -262142, 4, 0, -262141, 4, 0, -262143, 4, 0, -262144, 4, 0, -196609, 4, 0, -196610, 4, 0, -196611, 4, 0, -327678, 4, 0, -327677, 4, 0, 327669, 4, 0, 327671, 4, 0, 327672, 4, 0, 327673, 4, 0, 327674, 4, 0, 327675, 4, 0, 393205, 4, 0, 393206, 4, 0, 393207, 4, 0, 393208, 4, 0, 393209, 4, 0, 393210, 4, 0, 393211, 4, 0, 786398, 4, 0, 786399, 4, 0, 786400, 4, 0, 786401, 4, 0, 786402, 4, 0, 851938, 4, 0, 917474, 4, 0, 983010, 4, 0, 1048547, 4, 0, 1048548, 4, 0, 1048549, 4, 0, 1048550, 4, 0, 1114086, 4, 0, 1179622, 4, 0, 1179623, 4, 0, 1179624, 4, 0, 1245160, 4, 0, 1310696, 4, 0, 1310697, 4, 0, 1376233, 4, 0, 1376232, 4, 0, 1376231, 4, 0, 1376230, 4, 0, 1376229, 4, 0, 1376228, 4, 0, 1376227, 4, 0, 1376226, 4, 0, 1376225, 4, 0, 1376224, 4, 0, 1376223, 4, 0, 1376222, 4, 0, 1310686, 4, 0, 1245150, 4, 0, 1179614, 4, 0, 1114078, 4, 0, 1048542, 4, 0, 1048543, 4, 0, 983007, 4, 0, 917471, 4, 0, 851935, 4, 0, 851934, 4, 0, 917470, 4, 0, 983006, 4, 0, 983008, 4, 0, 917472, 4, 0, 851936, 4, 0, 851937, 4, 0, 917473, 4, 0, 983009, 4, 0, 1048545, 4, 0, 1114081, 4, 0, 1048544, 4, 0, 1114079, 4, 0, 1179615, 4, 0, 1245151, 4, 0, 1310687, 4, 0, 1245152, 4, 0, 1310688, 4, 0, 1179616, 4, 0, 1114080, 4, 0, 1179617, 4, 0, 1245153, 4, 0, 1048546, 4, 0, 1114082, 4, 0, 1179618, 4, 0, 1310689, 4, 0, 1310690, 4, 0, 1310691, 4, 0, 1310692, 4, 0, 1245154, 4, 0, 1245155, 4, 0, 1179619, 4, 0, 1114084, 4, 0, 1114083, 4, 0, 1114085, 4, 0, 1179621, 4, 0, 1179620, 4, 0, 1245156, 4, 0, 1245157, 4, 0, 1245158, 4, 0, 1245159, 4, 0, 1310694, 4, 0, 1310693, 4, 0, 1310695, 4, 0, 720928, 4, 0, 720927, 4, 0, 720926, 4, 0, 720925, 4, 0, 720924, 4, 0, 720923, 4, 0, 786459, 4, 0, 851995, 4, 0, 917531, 4, 0, 983067, 4, 0, 983066, 4, 0, 983065, 4, 0, 983064, 4, 0, 1114134, 4, 0, 1179670, 4, 0, 1245206, 4, 0, 1245205, 4, 0, 1310741, 4, 0, 1310742, 4, 0, 1310743, 4, 0, 1310744, 4, 0, 1310745, 4, 0, 1310746, 4, 0, 1310747, 4, 0, 1310748, 4, 0, 1310749, 4, 0, 1310750, 4, 0, 1310752, 4, 0, 1179680, 4, 0, 1114144, 4, 0, 1048608, 4, 0, 983072, 4, 0, 917536, 4, 0, 852000, 4, 0, 786464, 4, 0, 1179679, 4, 0, 1114142, 4, 0, 1048605, 4, 0, 1048604, 4, 0, 1048603, 4, 0, 1048602, 4, 0, 1114137, 4, 0, 1114138, 4, 0, 1114139, 4, 0, 1114140, 4, 0, 1114136, 4, 0, 1048600, 4, 0, 1048601, 4, 0, 1114135, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 4, 0, 1179675, 4, 0, 1179676, 4, 0, 1245212, 4, 0, 1245213, 4, 0, 1245214, 4, 0, 1245211, 4, 0, 1245210, 4, 0, 1245209, 4, 0, 1245208, 4, 0, 1245207, 4, 0, 1245215, 4, 0, 1245216, 4, 0, 1310751, 4, 0, 1179678, 4, 0, 1114141, 4, 0, 1179677, 4, 0, 1114143, 4, 0, 1048607, 4, 0, 983071, 4, 0, 917535, 4, 0, 851999, 4, 0, 786463, 4, 0, 917534, 4, 0, 983069, 4, 0, 983068, 4, 0, 917532, 4, 0, 786460, 4, 0, 851996, 4, 0, 851997, 4, 0, 917533, 4, 0, 786461, 4, 0, 851998, 4, 0, 786462, 4, 0, 983070, 4, 0, 1048606, 4, 0, -589837, 4, 0, -524301, 4, 0, -458765, 4, 0, -393229, 4, 0, -327693, 4, 0, -262157, 4, 0, -196621, 4, 0, -131085, 4, 0, -65549, 4, 0, 131077, 4, 0, 196613, 4, 0, 262149, 4, 0, 327685, 4, 0, 393221, 4, 0, 458757, 4, 0, 524293, 4, 0, 589829, 4, 0, 327670, 4, 0, 1179669, 4, 0, 1114133, 4, 0, 1048599, 4, 0, 983063, 4, 0, -65532, 3, 0, 4, 3, 0, 196612, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0)

[node name="SpawnLocations" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnLocations"]
position = Vector2(1710, 540)

[node name="Marker2D2" type="Marker2D" parent="SpawnLocations"]
position = Vector2(270, 270)

[node name="Marker2D3" type="Marker2D" parent="SpawnLocations"]
position = Vector2(2070, 720)

[node name="Marker2D4" type="Marker2D" parent="SpawnLocations"]
position = Vector2(810, 180)

[node name="Marker2D5" type="Marker2D" parent="SpawnLocations"]
position = Vector2(720, 1260)

[node name="Marker2D6" type="Marker2D" parent="SpawnLocations"]
position = Vector2(1530, 1170)

[node name="Marker2D7" type="Marker2D" parent="SpawnLocations"]
position = Vector2(1260, 270)

[node name="Marker2D8" type="Marker2D" parent="SpawnLocations"]
position = Vector2(2070, 180)

[node name="Tank_spawn" parent="." instance=ExtResource("2_prab3")]

[node name="Flag" parent="." instance=ExtResource("4_p7dn3")]
position = Vector2(600, 93)

[node name="EnemyFlag" parent="." instance=ExtResource("5_mx5hu")]
position = Vector2(569.485, 566.729)

[node name="PauseScene" parent="." instance=ExtResource("3_1th3n")]

[connection signal="tank_spawn" from="Tank_spawn" to="." method="_on_tank_spawn_tank_spawn"]
